--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Devang Jhaveri
 description: Software Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/dp.jpg
+avatar: /images/dp1-min.jpg
 
 #
 # Flags below are optional
